refactor: EvaRecordQueryRepository 去 cour_inf 直连